added vendor test

--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "automation of dokan using jest",
   "main": "index.js",
   "scripts": {
-    "test": "jest -w 1  " , 
-    "test:au": "jest -w 1  && allure serve",  
-    "test:rm": "rm -rf allure-results"  
-
-
-    
+    "test": "jest -w 1  ",
+    "test:au": "jest -w 1  && allure serve",
+    "test:rm": "rm -rf allure-results",
+    "test:alltest": "jest",
+    "test:withtestdetails": "jest --verbose",
+    "test:alltestwithallure": "jest && allure serve "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "jest": "^27.4.4",
     "jest-allure": "^0.1.3",
     "jest-puppeteer": "^6.0.2",
